--- a/src/Public/login.html
+++ b/src/Public/login.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Poet - Login</title>
     <link rel="stylesheet" href="fonts/material-icon/css/material-design-iconic-font.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -41,8 +42,8 @@
 
     </div>
 
-    <!-- <script src="vendor/jquery/jquery.min.js"></script> -->
-    <script type="text/javascript" src="resources/js/jquery-3.3.1.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="vendor/jquery/jquery.min.js"></script>
     <script src="resources/js/login-main.js"></script>
     <script src="resources/js/bootstrap-notify.js"></script>
 </body>
