--- a/src/Public/sign-up.html
+++ b/src/Public/sign-up.html
@@ -6,17 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Poet - Sign Up</title>
 
-    <!-- Font Icon -->
+
     <link rel="stylesheet" href="fonts/material-icon/css/material-design-iconic-font.min.css">
 
-    <!-- Main css -->
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
     <div class="main">
 
-        <!-- Sign up form -->
+
         <section class="signup">
             <div class="container">
                 <div class="signup-content">
@@ -61,8 +62,8 @@
         </section> 
     </div>
 
-    <!-- <script src="vendor/jquery/jquery.min.js"></script> -->
-    <script type="text/javascript" src="resources/js/jquery-3.3.1.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="vendor/jquery/jquery.min.js"></script>
     <script src="resources/js/login-main.js"></script>
     <script src="resources/js/bootstrap-notify.js"></script>
 </body>
